--- a/src/main/resources/user/dev/druid.properties
+++ b/src/main/resources/user/dev/druid.properties
@@ -2,7 +2,7 @@
 jdbc.datasource.user.name=userDataSourceUser
 
 #本地数据库zmsg
-jdbc.datasource.user.url=jdbc:mysql://47.75.74.26:3306/aliyun
+jdbc.datasource.user.url=jdbc:mysql://47.75.74.26
 jdbc.datasource.user.username=
 jdbc.datasource.user.password=
 jdbc.driver=com.mysql.jdbc.Driver
